packages/table/src/table.pcss
.sds-table {
  overflow-x: auto;
  width: 100%;

  &__table {
    --table-padding-cell: var(--sds-base-size-m);

    width: 100%;

    /* stylelint-disable selector-max-type */
    @media (width < 720px) {
      --table-padding-cell: var(--sds-base-size-s);

      display: block;

      & > thead,
      & > thead > tr,
      & > thead > tr > th {
        display: none;
      }

      & > tbody,
      & > tbody > tr,
      & > tfoot,
      & > tfoot > tr {
        display: block;
      }

      & > tbody > tr > td,
      & > tfoot > tr > td {
        align-items: center;
        display: flex;
        justify-content: space-between;
      }

      [data-th]::before {
        content: attr(data-th);
        display: block;
      }
    }
    /* stylelint-enable selector-max-type */
  }

  &__caption {
    caption-side: bottom;
    font-size: var(--sds-typography-body-fontsize-small);
    font-weight: var(--sds-typography-weight-regular);
    line-height: var(--sds-typography-body-lineheight-small);
  }

  &__header,
  &__cell {
    padding: var(--table-padding-cell);
  }

  &__foot &__row {
    border-top: var(--sds-space-border-weight-regular) solid
      var(--sds-color-layout-divider-subtle);
  }

  &__head &__row,
  &__body &__row:not(:last-child) {
    border-bottom: var(--sds-space-border-weight-regular) solid
      var(--sds-color-layout-divider-subtle);
  }

  &__header,
  [data-th]::before,
  &__foot &__cell {
    font-size: var(--sds-typography-heading-fontsize-overline);
    font-weight: var(--sds-typography-weight-bold);
    line-height: var(--sds-typography-heading-lineheight-overline);
    text-transform: uppercase;
    text-align: start;
  }
}

